# TinyHTTP

./: CMakeLists.txt  README.md
include/http/: CorsConfig.h  CorsMiddleware.h  FileUtil.h  HTTPServer.h  HttpConnection.h  HttpContext.h  HttpRequest.h  HttpResponse.h  Middleware.h  MiddlewareChain.h  MysqlUtil.h  Router.h  RouterHandler.h  Session.h  SessionManager.h  SessionStorage.h  SslConfig.h  SslConnection.h  SslContext.h  SslTypes.h
include/mysqlDb/: DbConnection.h  DbConnectionPool.h  DbException.h  public.h
src/: CMakeLists.txt
src/Source/: index.html
src/http/: CorsMiddleware.cpp  HTTPServer.cpp  HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  MidllewareChain.cpp  Router.cpp  RouterTest.cpp  Session.cpp  SessionManager.cpp  SessionStrorage.cpp  SslConfig.cpp  SslConnection.cpp  SslContext.cpp
src/mysqlDb/: DbConnection.cpp  DbConnectionPool.cpp
test/: CMakeLists.txt  HttpServerTest.cpp
test/tmp/: HttpTest.cpp  HttpsTest.cpp
